--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <body>
     <h1 class="h1font">CV: Eldar Gofman</h1>
     <h2>Contact information</h2>
+    <ul>
+        <li>Phone: +79173201274</li>
+        <li>E-mail: ehl3595574@gmail.com</li>
+        <li>GitHub: Knight047</li>
+        <li>Telegram: @Knight_047</li>
+    </ul>
+    </ul>
     <h2>Skills and Proficency</h2>
+    <ul>
+        <li>GitHub, Git, HTML, CSS</li>
+        <li>VS Code</li>
+        <li>Microsoft: Excel, Word, PowerPoint, To Do, OneNote</li>
+        <li>Google Chrome</li>
+    </ul>
     <h2>Briefly About Myself</h2>
     <h2>Hobby</h2>
     <h2>Languages</h2>
