--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="content">
+        <header>
     <h1 class="h1font">CV: Eldar Gofman</h1>
-    <h2>Contact information</h2>
+        </header>
+    <h2 class="font2">Contact information:</h2>
     <ul class="center">
         <li>Phone: +79173201274</li>
         <li>E-mail: ehl3595574@gmail.com</li>
@@ -18,16 +20,16 @@
         <li>Telegram: @Knight_047</li>
     </ul>
     </ul>
-    <h2 class="font2">Skills and Proficency</h2>
+    <h2 class="font2">Skills and Proficency:</h2>
     <ul>
         <li>GitHub, Git, HTML, CSS</li>
         <li>VS Code</li>
         <li>Microsoft: Excel, Word, PowerPoint, To Do, OneNote</li>
         <li>Google Chrome</li>
     </ul>
-    <h2 class="font3">Briefly About Myself</h2>
-    <p>My name is Eldar, I am a project manager in an oil and gas engineering company. I am 27 years old. 5 years ago I graduated from the Higher Economic University and since then I have been building a career in the chosen direction. But lately my profession has ceased to bring me pleasure. To date, I have become interested in programming on my own and, by a lucky chance, found courses at the RSSchool school. I believe that I will be able to master the profession of a Frontend developer and finally do what I love to do programming.  </p>
-    <h2 class="font4" >Hobby</h2>
+    <h2 class="font2">Briefly About Myself:</h2>
+    <p>My name is Eldar, I am a project manager in an oil and gas engineering company. I am 27 years old. 5 years ago I graduated from the Higher Economic University and since then I have been building a career in the chosen direction. But lately my profession has ceased to bring me pleasure. To date, I have become interested in programming on my own and, by a lucky chance, found courses at the RSSchool. I believe that I will be able to master the profession of a Frontend developer and finally do what I love to do programming.  </p>
+    <h2 class="font2" >Hobby:</h2>
     <ul>
         <li>Programming</li>
         <li>Rock music is one love!</li>
@@ -35,15 +37,18 @@
         <li>Guitar</li>
         <li>Auto/Moto</li>
     </ul>
-    <h2 class="font5">Education</h2>
+    <h2 class="font2">Education:</h2>
     <ul>
         <li>Bachelor: Plekhanov Russian University of Economics </li>
     </ul>
-    <h2 class="font6">Languages</h2>
+    <h2 class="font2">Languages:</h2>
     <ul>
         <li>Russian - Native.</li>
         <li>English - A2</li>
     </ul>
+    <footer>
+        <p>@Knight047 2022.</p>
+    </footer>
 </div>
 </body>
 </html>
