--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="content">
-        <header>
+    <header>
     <h1 class="h1font">CV: Eldar Gofman</h1>
-        </header>
+    </header>
     <h2 class="font2">Contact information:</h2>
     <ul class="center">
         <li>Phone: +79173201274</li>
@@ -21,7 +21,7 @@
     </ul>
     </ul>
     <h2 class="font2">Skills and Proficency:</h2>
-    <ul>
+    <ul class="center">
         <li>GitHub, Git, HTML, CSS</li>
         <li>VS Code</li>
         <li>Microsoft: Excel, Word, PowerPoint, To Do, OneNote</li>
@@ -30,7 +30,7 @@
     <h2 class="font2">Briefly About Myself:</h2>
     <p>My name is Eldar, I am a project manager in an oil and gas engineering company. I am 27 years old. 5 years ago I graduated from the Higher Economic University and since then I have been building a career in the chosen direction. But lately my profession has ceased to bring me pleasure. To date, I have become interested in programming on my own and, by a lucky chance, found courses at the RSSchool. I believe that I will be able to master the profession of a Frontend developer and finally do what I love to do programming.  </p>
     <h2 class="font2" >Hobby:</h2>
-    <ul>
+    <ul class="center">
         <li>Programming</li>
         <li>Rock music is one love!</li>
         <li>Tatto</li>
@@ -38,16 +38,18 @@
         <li>Auto/Moto</li>
     </ul>
     <h2 class="font2">Education:</h2>
-    <ul>
+    <ul class="center">
         <li>Bachelor: Plekhanov Russian University of Economics </li>
     </ul>
     <h2 class="font2">Languages:</h2>
-    <ul>
+    <ul class="center">
         <li>Russian - Native.</li>
         <li>English - A2</li>
     </ul>
     <footer>
-        <p>@Knight047 2022.</p>
+        <p>2022 @Knight047</p>
+        <a class="site" href="https://rs.school/js/">RSSchool</a>
+        <img class="pic" src="/rsschool-cv/pic/background.png" target="_self"> <alt="Rsschool">
     </footer>
 </div>
 </body>
