--- a/index.html
+++ b/index.html
@@ -46,10 +46,17 @@
         <li>Russian - Native.</li>
         <li>English - A2</li>
     </ul>
-    <footer>
-        <p>2022 @Knight047</p>
-        <a class="site" href="https://rs.school/js/">RSSchool</a>
-        <img class="pic" src="/rsschool-cv/pic/background.png" target="_self"> <alt="Rsschool">
+    <footer class="footer">
+        <div class="container footer-container">
+        <div>©2022.
+        <a class="git" href="https://github.com/Knight047" target="_blanl">Github.com/Knight047</a>
+        </div>
+        <div>
+        <a class="site" href="https://rs.school/js/" target="_blank">RSSchool</a>
+        </div>
+        <div>
+        <img class="pic" src="/rsschool-cv/pic/background.png" alt="Rsschool">
+        </div>
     </footer>
 </div>
 </body>
