--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <header>
     <h1 class="h1font">CV: Eldar Gofman</h1>
     </header>
+
+<main class="main">
     <h2 class="font2">Contact information:</h2>
     <ul class="center">
         <li>Phone: +79173201274</li>
@@ -20,6 +22,7 @@
         <li>Telegram: @Knight_047</li>
     </ul>
     </ul>
+
     <h2 class="font2">Skills and Proficency:</h2>
     <ul class="center">
         <li>GitHub, Git, HTML, CSS</li>
@@ -27,6 +30,17 @@
         <li>Microsoft: Excel, Word, PowerPoint, To Do, OneNote</li>
         <li>Google Chrome</li>
     </ul>
+    <h2 class="font2">Code:</h2>
+    <pre class="pre">
+        <code>
+            display: flex;
+            justify-content: left;
+            padding: 5px;
+            background-color: #7d0000;
+            color: rgb(0, 0, 0);
+        </code>
+    </pre>
+
     <h2 class="font2">Briefly About Myself:</h2>
     <p>My name is Eldar, I am a project manager in an oil and gas engineering company. I am 27 years old. 5 years ago I graduated from the Higher Economic University and since then I have been building a career in the chosen direction. But lately my profession has ceased to bring me pleasure. To date, I have become interested in programming on my own and, by a lucky chance, found courses at the RSSchool. I believe that I will be able to master the profession of a Frontend developer and finally do what I love to do programming.  </p>
     <h2 class="font2" >Hobby:</h2>
@@ -37,15 +51,18 @@
         <li>Guitar</li>
         <li>Auto/Moto</li>
     </ul>
+
     <h2 class="font2">Education:</h2>
     <ul class="center">
         <li>Bachelor: Plekhanov Russian University of Economics </li>
     </ul>
+
     <h2 class="font2">Languages:</h2>
     <ul class="center">
         <li>Russian - Native.</li>
         <li>English - A2</li>
     </ul>
+</main>
     <footer class="footer">
         <div class="container footer-container">
         <div>©2022.
