--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="data:;base64,=">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,21 +9,55 @@
     <title>CV - Eldar Gofman</title>
 </head>
 <body>
-    <div class="content">
-    <header>
+
+    <header class="header">
+        <div class="container header-container">
+            <nav class="nav">
+            <ul class="nav-txt">
+                <li class="nav-item1">
+                    <a href="#Contact information" class="nav-link">Contact information</a>
+                </li>
+                <li class="nav-item1">
+                    <a href="#Skills and Proficency" class="nav-link">Skills and Proficency</a>
+                </li>
+                <li class="nav-item1">
+                    <a href="#Code" class="nav-link">Code</a>
+                </li>
+                <li class="nav-item1">
+                    <a href="#Briefly About Myself" class="nav-link">Briefly About Myself</a>
+                </li>
+                <li class="nav-item1">
+                    <a href="#Hobby" class="nav-link">Hobby</a>
+                </li>
+                <li class="nav-item1">
+                    <a href="#Education" class="nav-link">Education</a>
+                </li>
+                <li class="nav-item1">
+                    <a href="#Languages" class="nav-link">Languages</a>
+                </li>
+            </ul>
+            </nav>
     <h1 class="h1font">CV: Eldar Gofman</h1>
+        </div>
     </header>
 
 <main class="main">
-    <h2 class="font2">Contact information:</h2>
-    <ul class="center">
+    <div class="container main-container">
+        <section class="section photo" id="profile">
+            <img src="/rsschool-cv/pic/WhatsApp Image 2021-08-13 at 14.33.04.jpeg" alt class="profile-photo">
+        </section>
+
+        <section class="section" id="Contact information">
+        <h2 class="font2">Contact information:</h2>
+        <ul class="center">
         <li>Phone: +79173201274</li>
         <li>E-mail: ehl3595574@gmail.com</li>
         <li>GitHub: Knight047</li>
         <li>Telegram: @Knight_047</li>
-    </ul>
-    </ul>
+        </ul>
+        </section>
 
+        <section class="section" id="Skills and Proficency">
     <h2 class="font2">Skills and Proficency:</h2>
     <ul class="center">
         <li>GitHub, Git, HTML, CSS</li>
@@ -30,6 +65,9 @@
         <li>Microsoft: Excel, Word, PowerPoint, To Do, OneNote</li>
         <li>Google Chrome</li>
     </ul>
+        </section>
+
+        <section class="section" id="Code">
     <h2 class="font2">Code:</h2>
     <pre class="pre">
         <code>
@@ -40,9 +78,14 @@
             color: rgb(0, 0, 0);
         </code>
     </pre>
+        </section>
 
+        <section class="section" id="Briefly About Myself">
     <h2 class="font2">Briefly About Myself:</h2>
     <p>My name is Eldar, I am a project manager in an oil and gas engineering company. I am 27 years old. 5 years ago I graduated from the Higher Economic University and since then I have been building a career in the chosen direction. But lately my profession has ceased to bring me pleasure. To date, I have become interested in programming on my own and, by a lucky chance, found courses at the RSSchool. I believe that I will be able to master the profession of a Frontend developer and finally do what I love to do programming.  </p>
+    </section>
+
+    <section class="section" id="Hobby">
     <h2 class="font2" >Hobby:</h2>
     <ul class="center">
         <li>Programming</li>
@@ -51,17 +94,23 @@
         <li>Guitar</li>
         <li>Auto/Moto</li>
     </ul>
+        </section>
 
+        <section class="section" id="Education">
     <h2 class="font2">Education:</h2>
     <ul class="center">
         <li>Bachelor: Plekhanov Russian University of Economics </li>
     </ul>
+        </section>
 
+        <section class="section" id="Languages">
     <h2 class="font2">Languages:</h2>
     <ul class="center">
         <li>Russian - Native.</li>
         <li>English - A2</li>
     </ul>
+    </div>
+        </section>
 </main>
     <footer class="footer">
         <div class="container footer-container">
@@ -72,9 +121,8 @@
         <a class="site" href="https://rs.school/js/" target="_blank">RSSchool</a>
         </div>
         <div>
-        <img class="pic" src="/rsschool-cv/pic/background.png" alt="Rsschool">
+        <img class="pic" src="/rsschool-cv/pic/rs_school_js.svg" alt="Rsschool">
         </div>
     </footer>
-</div>
 </body>
 </html>
