--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                     <a href="#Code" class="nav-link">Code</a>
                 </li>
                 <li class="nav-item1">
+                    <a href="#Projects" class="nav-link">Projects</a>
+                </li> 
+                <li class="nav-item1">
                     <a href="#Briefly About Myself" class="nav-link">Briefly About Myself</a>
                 </li>
                 <li class="nav-item1">
@@ -78,6 +81,15 @@
             color: rgb(0, 0, 0);
         </code>
     </pre>
+        </section>
+
+        <section class="section" id="Projects">
+        <h2 class="font2">Projects</h2>
+        <ul class="Center">
+            <li>CV#1. Markdown & Git</li>
+            <li>CV#2. HTML, CSS & Git Basics</li>
+            <li>CV#3. Cross-Check</li>
+        </ul>
         </section>
 
         <section class="section" id="Briefly About Myself">
