fix: style html loc

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <section class="section" id="Contact information">
         <h2 class="font2">Contact information:</h2>
         <ul class="center">
+        <li>Location: Saratov, Russia</li>
         <li>Phone: +79173201274</li>
         <li>E-mail: ehl3595574@gmail.com</li>
         <li>GitHub: Knight047</li>
