--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#Briefly About Myself"class="nav-link">Briefly About Myself</a>
                 </li>
                 <li class="nav-item1">
-                    <a href="#Hobby" class="nav-link">Hobby</a>
+                    <a href="#Hobby"class="nav-link">Hobby</a>
                 </li>
                 <li class="nav-item1">
                     <a href="#Education"class="nav-link">Education</a>
@@ -46,10 +46,10 @@
 <main class="main">
     <div class="container main-container">
         <section class="section photo" id="profile">
-            <img src="/rsschool-cv/pic/WhatsApp Image 2021-08-13 at 14.33.04.jpeg" alt class="profile-photo">
+            <img src="/rsschool-cv/pic/WhatsApp Image 2021-08-13 at 14.33.04.jpeg"alt class="profile-photo">
         </section>
 
-        <section class="section" id="Contact information">
+        <section class="section"id="Contact information">
         <h2 class="font2">Contact information:</h2>
         <ul class="center">
         <li>Location: Saratov, Russia</li>
@@ -60,7 +60,7 @@
         </ul>
         </section>
 
-        <section class="section" id="Skills and Proficency">
+        <section class="section"id="Skills and Proficency">
     <h2 class="font2">Skills and Proficency:</h2>
     <ul class="center">
         <li>GitHub, Git, HTML, CSS</li>
@@ -70,7 +70,7 @@
     </ul>
         </section>
 
-        <section class="section" id="Code">
+        <section class="section"id="Code">
     <h2 class="font2">Code:</h2>
     <pre class="pre">
         <code>
@@ -83,7 +83,7 @@
     </pre>
         </section>
 
-        <section class="section" id="Projects">
+        <section class="section"id="Projects">
         <h2 class="font2">Projects</h2>
         <ul class="Center">
             <li>CV#1. Markdown & Git</li>
@@ -92,12 +92,12 @@
         </ul>
         </section>
 
-        <section class="section" id="Briefly About Myself">
+        <section class="section"id="Briefly About Myself">
     <h2 class="font2">Briefly About Myself:</h2>
     <p>My name is Eldar, I am a project manager in an oil and gas engineering company. I am 27 years old. 5 years ago I graduated from the Higher Economic University and since then I have been building a career in the chosen direction. But lately my profession has ceased to bring me pleasure. To date, I have become interested in programming on my own and, by a lucky chance, found courses at the RSSchool. I believe that I will be able to master the profession of a Frontend developer and finally do what I love to do programming.  </p>
     </section>
 
-    <section class="section" id="Hobby">
+    <section class="section"id="Hobby">
     <h2 class="font2" >Hobby:</h2>
     <ul class="center">
         <li>Programming</li>
@@ -108,14 +108,14 @@
     </ul>
         </section>
 
-        <section class="section" id="Education">
+        <section class="section"id="Education">
     <h2 class="font2">Education:</h2>
     <ul class="center">
         <li>Bachelor: Plekhanov Russian University of Economics </li>
     </ul>
         </section>
 
-        <section class="section" id="Languages">
+        <section class="section"id="Languages">
     <h2 class="font2">Languages:</h2>
     <ul class="center">
         <li>Russian - Native.</li>
@@ -127,7 +127,7 @@
     <footer class="footer">
         <div class="container footer-container">
         <div>©2022.
-        <a class="git" href="https://github.com/Knight047" target="_blanl">Github.com/Knight047</a>
+        <a class="git" href="https://github.com/Knight047" target="_blank">Github.com/Knight047</a>
         </div>
         <div>
         <a class="site" href="https://rs.school/js/" target="_blank">RSSchool</a>
