--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <nav class="nav">
             <ul class="nav-txt">
                 <li class="nav-item1">
-                    <a href="#Contact information" class="nav-link">Contact information</a>
+                    <a href="#Contactinformation" class="nav-link">Contact information</a>
                 </li>
                 <li class="nav-item1">
-                    <a href="#Skills and Proficency" class="nav-link">Skills and Proficency</a>
+                    <a href="#SkillsAndProficency" class="nav-link">Skills and Proficency</a>
                 </li>
                 <li class="nav-item1">
                     <a href="#Code" class="nav-link">Code</a>
@@ -26,7 +26,7 @@
                     <a href="#Projects" class="nav-link">Projects</a>
                 </li> 
                 <li class="nav-item1">
-                    <a href="#Briefly About Myself" class="nav-link">Briefly About Myself</a>
+                    <a href="#BrieflyAboutMyself" class="nav-link">Briefly About Myself</a>
                 </li>
                 <li class="nav-item1">
                     <a href="#Hobby" class="nav-link">Hobby</a>
@@ -49,7 +49,7 @@
             <img src="/rsschool-cv/pic/WhatsApp Image 2021-08-13 at 14.33.04.jpeg" alt class="profile-photo">
         </section>
 
-        <section class="section" id="Contact information">
+        <section class="section" id="Contactinformation">
         <h2 class="font2">Contact information:</h2>
         <ul class="center">
         <li>Location: Saratov, Russia</li>
@@ -60,7 +60,7 @@
         </ul>
         </section>
 
-        <section class="section" id="Skills and Proficency">
+        <section class="section" id="SkillsAndProficency">
     <h2 class="font2">Skills and Proficency:</h2>
     <ul class="center">
         <li>GitHub, Git, HTML, CSS</li>
@@ -92,7 +92,7 @@
         </ul>
         </section>
 
-        <section class="section" id="Briefly About Myself">
+        <section class="section" id="BrieflyAboutMyself">
     <h2 class="font2">Briefly About Myself:</h2>
     <p>My name is Eldar, I am a project manager in an oil and gas engineering company. I am 27 years old. 5 years ago I graduated from the Higher Economic University and since then I have been building a career in the chosen direction. But lately my profession has ceased to bring me pleasure. To date, I have become interested in programming on my own and, by a lucky chance, found courses at the RSSchool. I believe that I will be able to master the profession of a Frontend developer and finally do what I love to do programming.  </p>
     </section>
