--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <main class="main">
     <div class="container main-container">
         <section class="section photo" id="profile">
-            <img src="/rsschool-cv/pic/WhatsApp Image 2021-08-13 at 14.33.04.jpeg" alt class="profile-photo">
+            <img src="/rsschool-cv/pic/img.jpeg" alt class="profile-photo">
         </section>
 
         <section class="section" id="Contactinformation">
