--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <li>English - A2</li>
     </ul>
         </section>
-
+    </div>
 </main>
     <footer class="footer">
         <div class="container footer-container">
