--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 <main class="main">
     <div class="container main-container">
         <section class="section photo" id="profile">
+            <div>
             <img src="/rsschool-cv/pic/img.jpeg" alt class="profile-photo">
+            </div>
         </section>
 
         <section class="section" id="Contactinformation">
