--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <div class="container main-container">
         <section class="section photo" id="profile">
             <img src="/rsschool-cv/pic/img.jpeg" alt class="profile-photo">
+            <div class="profile-title">
+                <h2 class="h2">@Knight047</h2>
+            </div>
         </section>
 
         <section class="section" id="Contactinformation">
